--- a/docs/_quarto.yml
+++ b/docs/_quarto.yml
@@ -11,7 +11,7 @@ book:
     - index.qmd
     - 01-SettingUp/setting-up.qmd
     - 02-JupyterBasics/jupyter-walkthrough.qmd
-#    - 03-R-Walkthrough/r-walkthrough.qmd
+    - 03-RBasics/r-walkthrough.qmd
 #    - 04-StatBasics/stat-basics.qmd
   
 
