trying to get more sections up

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -7,6 +7,10 @@ project:
     - chapters/02-JupyterBasics/jupyter-walkthrough.qmd
     - chapters/03-RBasics/r-walkthrough.qmd
     - chapters/04-StatBasics/stat-basics.qmd
+    - chapters/05-WorkingWithData/pythonAndR.qmd
+    - chapters/05-WorkingWithData/r_penguins.qmd
+    - chapters/05-WorkingWithData/pandas_penguins.qmd
+
 
 website:
   title: "Fundamentals of Machine Learning"
@@ -18,6 +22,7 @@ website:
         - chapters/02-JupyterBasics/jupyter-walkthrough.qmd
         - chapters/03-RBasics/r-walkthrough.qmd
         - chapters/04-StatBasics/stat-basics.qmd  
+        - chapters/05-WorkingWithData/pythonAndR.qmd
   
 
   
