updating published version

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -3,7 +3,9 @@ project:
   output-dir: docs
   render:
     - index.qmd
+    - chapters/00-OrientationProject/orientation-project.qmd
     - chapters/01-SettingUp/setting-up.qmd
+    - chapters/01-SettingUp/Cluster.md
     - chapters/02-JupyterBasics/jupyter-walkthrough.qmd
     - chapters/03-RBasics/r-walkthrough.qmd
     - chapters/04-StatBasics/stat-basics.qmd
@@ -20,6 +22,7 @@ website:
     contents:
       - section: "Contents"
         contents:
+        - chapters/00-OrientationProject/orientation-project.qmd
         - chapters/01-SettingUp/setting-up.qmd  
         - chapters/02-JupyterBasics/jupyter-walkthrough.qmd
         - chapters/03-RBasics/r-walkthrough.qmd
