updating published version

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -15,6 +15,7 @@ project:
     - chapters/06-LinearAlgebra/linear_algebra.qmd  
     - chapters/06-LinearAlgebra/linear_algebra_python.qmd
     - chapters/06-LinearAlgebra/linear_algebra_r.qmd
+    - chapters/07-Calculus/*.qmd
     - chapters/99-Resources/Cheatsheets.qmd
 
 website:
@@ -30,6 +31,7 @@ website:
         - chapters/04-StatBasics/stat-basics.qmd  
         - chapters/05-WorkingWithData/pythonAndR.qmd
         - chapters/06-LinearAlgebra/linear_algebra.qmd
+        - chapters/07-Calculus/calculus.qmd
       - section: "Resources"
         contents:
         - chapters/99-Resources/Cheatsheets.qmd
