--- a/_quarto.yml
+++ b/_quarto.yml
@@ -34,6 +34,7 @@ website:
       - section: "Problems"
         contents:
         - chapters/999-Problems/HW1.qmd
+        - chapters/999-Problems/Distributions.qmd
       - section: "Resources"
         contents:
         - chapters/99-Resources/Cheatsheets.qmd
