--- a/_quarto.yml
+++ b/_quarto.yml
@@ -39,6 +39,8 @@ website:
         - chapters/999-Problems/HW1.qmd
         - chapters/999-Problems/Distributions.qmd
         - chapters/999-Problems/HW2.qmd
+        - chapters/999-Problems/HW2-clean_up_function.qmd
+        - chapters/999-Problems/HW2-Iteration.qmd
       - section: "Resources"
         contents:
         - chapters/99-Resources/Cheatsheets.qmd
