--- a/_quarto.yml
+++ b/_quarto.yml
@@ -18,6 +18,7 @@ project:
     - chapters/09-Regexps/*.qmd
     - chapters/10-Shell/*.qmd
     - chapters/11-Git/*.qmd
+    - chapters/12-SQL/*.qmd
     - chapters/99-Resources/*.qmd
     - chapters/999-Problems/*.qmd
 
@@ -44,6 +45,7 @@ website:
         - chapters/09-Regexps/RegexProblems.qmd
         - chapters/10-Shell/UnixCommandLine.qmd
         - chapters/11-Git/Git.qmd
+        - chapters/12-SQL/sql.qmd
       - section: "Problems"
         contents:
         - chapters/999-Problems/HW1.qmd
