--- a/_quarto.yml
+++ b/_quarto.yml
@@ -56,6 +56,7 @@ website:
         - chapters/999-Problems/HW2-Poisson.qmd
         - chapters/999-Problems/HW3Assignment.qmd
         - chapters/999-Problems/HW4Assignment.qmd
+        - chapters/999-Problems/HW5Assignment.qmd
       - section: "Resources"
         contents:
         - chapters/99-Resources/Cheatsheets.qmd
