--- a/_quarto.yml
+++ b/_quarto.yml
@@ -18,6 +18,7 @@ project:
     - chapters/09-Regexps/*.qmd
     - chapters/10-Shell/*.qmd
     - chapters/11-Git/*.qmd
+    - chapters/12-SQL/*.qmd
     - chapters/13-Plotting/*.qmd
     - chapters/99-Resources/*.qmd
     - chapters/999-Problems/*.qmd
